--- a/week3/ch4_2.ipynb
+++ b/week3/ch4_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5f06a2ad-6969-483e-9904-f5d25b706ed6",
    "metadata": {},
    "outputs": [],
@@ -96,8 +96,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "952ad6d7-ee6f-4b39-b882-5a154d301922",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 상보(Complement)\n",
+    "\n",
+    "def complement (dna_seq):\n",
+    "    assert validate_dna(dna_seq), \"Invalid DNA sequence\" #valid한지 체크함. \n",
+    "    comp = \"\" #valid하다면 역상보 가닥을 넣을 comp 변수.\n",
+    "    for c in dna_seq.upper():  \n",
+    "        if c == 'A':\n",
+    "            comp = comp + \"T\"\n",
+    "        elif c == \"T\": \n",
+    "            comp = comp + \"A\"\n",
+    "        elif c == \"G\": \n",
+    "            comp = comp + \"C\"\n",
+    "        elif c== \"C\": \n",
+    "            comp = comp + \"G\"\n",
+    "    return comp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7275bdb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TACG'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq2 = \"ATGC\"\n",
+    "complement(seq2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d40f02",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -105,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -119,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
