ClustalW_example 수정

--- a/week6/ClustalW_example.ipynb
+++ b/week6/ClustalW_example.ipynb
@@ -20,7 +20,6 @@
    "source": [
     "from Bio.Align.Applications import ClustalwCommandline\n",
     "from Bio import AlignIO\n",
-    "import os\n",
     "\n",
     "# ClustalW 경로 지정 (설치된 위치를 정확히 지정하세요!)\n",
     "clustalw_exe = r\"C:\\Program Files (x86)\\ClustalW2\\clustalw2.exe\"\n",
@@ -66,86 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9e51756-b545-4b68-b906-dd887a6cff91",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ApplicationError",
-     "evalue": "Non-zero return code 1 from 'C:\\\\Users\\\\KGU\\\\Downloads\\\\muscle-win64.v5.3.exe -in example.fasta -out aligned.fasta', message 'Invalid command line'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mApplicationError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m muscle_cline \u001b[38;5;241m=\u001b[39m MuscleCommandline(muscle_exe, \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m=\u001b[39minput_file, out\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maligned.fasta\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# 명령어 실행\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m stdout, stderr \u001b[38;5;241m=\u001b[39m muscle_cline()\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# 정렬 결과 읽기\u001b[39;00m\n\u001b[0;32m     17\u001b[0m alignment \u001b[38;5;241m=\u001b[39m AlignIO\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maligned.fasta\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfasta\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\Bio\\Application\\__init__.py:569\u001b[0m, in \u001b[0;36mAbstractCommandline.__call__\u001b[1;34m(self, stdin, stdout, stderr, cwd, env)\u001b[0m\n\u001b[0;32m    566\u001b[0m     stderr_arg\u001b[38;5;241m.\u001b[39mclose()\n\u001b[0;32m    568\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m return_code:\n\u001b[1;32m--> 569\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ApplicationError(return_code, \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mself\u001b[39m), stdout_str, stderr_str)\n\u001b[0;32m    570\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m stdout_str, stderr_str\n",
-      "\u001b[1;31mApplicationError\u001b[0m: Non-zero return code 1 from 'C:\\\\Users\\\\KGU\\\\Downloads\\\\muscle-win64.v5.3.exe -in example.fasta -out aligned.fasta', message 'Invalid command line'"
-     ]
-    }
-   ],
-   "source": [
-    "# 구버전(머슬3). 오류남. \n",
-    "from Bio.Align.Applications import MuscleCommandline\n",
-    "from Bio import AlignIO\n",
-    "\n",
-    "# MUSCLE 실행파일 경로 설정\n",
-    "muscle_exe = r\"C:\\Users\\KGU\\Downloads\\muscle-win64.v5.3.exe\"\n",
-    "\n",
-    "# 입력 FASTA 파일 준비 (같은 디렉터리에 있어야 함)\n",
-    "input_file = \"example.fasta\"\n",
-    "\n",
-    "# MUSCLE을 이용해 정렬 수행 (결과는 aligned.fasta로 저장)\n",
-    "muscle_cline = MuscleCommandline(muscle_exe, input=input_file, out=\"aligned.fasta\")\n",
-    "\n",
-    "# 명령어 실행\n",
-    "stdout, stderr = muscle_cline()\n",
-    "\n",
-    "# 정렬 결과 읽기\n",
-    "alignment = AlignIO.read(\"aligned.fasta\", \"fasta\")\n",
-    "print(alignment)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5434613-3f1e-4024-ba03-8eb274012481",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ApplicationError",
-     "evalue": "Non-zero return code 1 from 'C:\\\\Users\\\\KGU\\\\Downloads\\\\muscle-win64.v5.3.exe -in example.fasta -out aligned.fasta', message 'Invalid command line'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mApplicationError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m muscle_cline \u001b[38;5;241m=\u001b[39m MuscleCommandline(muscle_exe, \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m=\u001b[39minput_file, out\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maligned.fasta\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# 실행\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m stdout, stderr \u001b[38;5;241m=\u001b[39m muscle_cline()\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# 결과 읽기\u001b[39;00m\n\u001b[0;32m     15\u001b[0m alignment \u001b[38;5;241m=\u001b[39m AlignIO\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maligned.fasta\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfasta\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\Bio\\Application\\__init__.py:569\u001b[0m, in \u001b[0;36mAbstractCommandline.__call__\u001b[1;34m(self, stdin, stdout, stderr, cwd, env)\u001b[0m\n\u001b[0;32m    566\u001b[0m     stderr_arg\u001b[38;5;241m.\u001b[39mclose()\n\u001b[0;32m    568\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m return_code:\n\u001b[1;32m--> 569\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ApplicationError(return_code, \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mself\u001b[39m), stdout_str, stderr_str)\n\u001b[0;32m    570\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m stdout_str, stderr_str\n",
-      "\u001b[1;31mApplicationError\u001b[0m: Non-zero return code 1 from 'C:\\\\Users\\\\KGU\\\\Downloads\\\\muscle-win64.v5.3.exe -in example.fasta -out aligned.fasta', message 'Invalid command line'"
-     ]
-    }
-   ],
-   "source": [
-    "# 에러남 \n",
-    "from Bio.Align.Applications import MuscleCommandline\n",
-    "from Bio import AlignIO\n",
-    "\n",
-    "# MUSCLE 실행 파일 경로 (확실히 .exe 포함!)\n",
-    "muscle_exe = \"C:\\\\Users\\\\KGU\\\\Downloads\\\\muscle-win64.v5.3.exe\"\n",
-    "input_file = \"example.fasta\"\n",
-    "\n",
-    "# MUSCLE 명령어 설정\n",
-    "muscle_cline = MuscleCommandline(muscle_exe, input=input_file, out=\"aligned.fasta\")\n",
-    "\n",
-    "# 실행\n",
-    "stdout, stderr = muscle_cline()\n",
-    "\n",
-    "# 결과 읽기\n",
-    "alignment = AlignIO.read(\"aligned.fasta\", \"fasta\")\n",
-    "print(alignment)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b29871c5-0fe7-4faf-8e9e-3dc397f85fe3",
    "metadata": {},
    "outputs": [
@@ -167,7 +86,7 @@
     "from Bio import AlignIO\n",
     "\n",
     "# MUSCLE v5 실행 경로\n",
-    "muscle_exe = r\"C:\\Users\\jihyu\\Downloads\\muscle-win64.v5.3.exe\"\n",
+    "muscle_exe = r\"C:\\Users\\~~~\\Downloads\\muscle-win64.v5.3.exe\"\n",
     "\n",
     "#입력 및 출력 파일\n",
     "input_file = \"example.fasta\"\n",
