upgma, nj, mp 주석 추가

--- a/week7/ch9-upgma_nj_mp.ipynb
+++ b/week7/ch9-upgma_nj_mp.ipynb
@@ -113,10 +113,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# STEP 1: 정렬된 FASTA 파일 읽기\n",
-    "alignment = AlignIO.read(\"example_aligned.fasta\", \"fasta\") #데이터는 4개의 ABCD 정렬된 서열 \n",
+    "alignment = AlignIO.read(\"example_aligned.fasta\", \"fasta\")  \n",
+    "# example_aligned.fasta 파일로부터 4개 서열(ABCD)을 읽어옴\n",
     "print(\"Loaded alignment length:\", alignment.get_alignment_length())\n",
-    "\n",
-    "#길이가 총 12개임을 확인함."
+    "# 총 alignment 길이(서열 길이)가 12개임을 확인함"
    ]
   },
   {
@@ -140,14 +140,12 @@
     }
    ],
    "source": [
-    "\n",
     "# STEP 2: 거리 행렬 계산\n",
-    "calculator = DistanceCalculator(\"identity\") #같고 다른지만 고려한다는 옵션 = identity 를 사용해서 거리 행렬 계산. \n",
+    "calculator = DistanceCalculator(\"identity\")  \n",
+    "# DistanceCalculator(\"identity\")는 서열 간 '같고 다름'만을 기준으로 거리 계산\n",
     "dm = calculator.get_distance(alignment)\n",
     "print(\"\\nPairwise distance matrix:\\n\", dm)\n",
-    "\n",
-    "# 각 pair 마다 같은지 다른지를 통해 거리 확인 \n",
-    "# 같고 다른거의 비율로 계산이 됨. 1보다 작은 값으로 프린트 됨"
+    "# pairwise로 서열 간 거리 계산 결과 출력 (1보다 작은 값으로 나옴)"
    ]
   },
   {
@@ -176,11 +174,13 @@
    "source": [
     "\n",
     "# STEP 3-1: Neighbor-Joining (NJ) 계통수 생성\n",
-    "constructor = DistanceTreeConstructor() # 생성자 생성\n",
-    "nj_tree = constructor.nj(dm) #constructor.nj가 네이버 조이닝 구하는 함수. 여기에 거리 행렬 넣으면 됨 \n",
+    "constructor = DistanceTreeConstructor()  \n",
+    "# 거리 기반 트리 생성자 객체 생성\n",
+    "nj_tree = constructor.nj(dm)  \n",
+    "# NJ 방법으로 거리 행렬을 입력하여 계통수 생성\n",
     "print(\"\\nNeighbor-Joining Tree:\")\n",
     "Phylo.draw_ascii(nj_tree)\n",
-    "# 당연히 루트에서 터미널 노드까지 거리는 다를 수 있다."
+    "# NJ 트리 출력 (root에서 terminal node까지 거리 다를 수 있음)"
    ]
   },
   {
@@ -209,30 +209,32 @@
    "source": [
     "\n",
     "# STEP 3-2: UPGMA 계통수 생성\n",
-    "upgma_tree = constructor.upgma(dm) #upgma 함수에 또 거리행렬 넣으면 구할 수 있음 \n",
+    "upgma_tree = constructor.upgma(dm)  \n",
+    "# UPGMA 방법으로 거리 행렬을 입력하여 계통수 생성\n",
     "print(\"\\nUPGMA Tree:\")\n",
     "Phylo.draw_ascii(upgma_tree)\n",
-    "\n",
-    "# UPGMA와 네이버 조이닝 은 branch length는 다르지만 tree topology는 같다!!!!\n"
+    "# UPGMA 트리 출력\n",
+    "# 여기서는 UPGMA와 NJ 모두 topology(가지 구조)는 같지만, branch length(가지 길이)는 다를 수 있음"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8566172d-a7c4-41f2-89c8-ef98ad889108",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# STEP 3-3: Maximum Parsimony (MP) 계통수 생성\n",
-    "scorer = ParsimonyScorer()\n",
-    "searcher = NNITreeSearcher(scorer) #휴리스틱 중 NNI 사용할거임. "
+    "\n",
+    "scorer = ParsimonyScorer()  \n",
+    "# Maximum Parsimony 방법에서 각 트리의 점수를 매기는 Scorer 생성\n",
+    "searcher = NNITreeSearcher(scorer)  \n",
+    "# NNI(Nearest Neighbor Interchange) 방법을 사용해서 더 나은 트리를 탐색하는 Searcher 생성"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ae0bd6b5-eeae-4ddb-8371-2b6914f10701",
    "metadata": {},
    "outputs": [
@@ -254,14 +256,16 @@
     }
    ],
    "source": [
+    "# NJ 트리를 초기 트리(initial tree)로 설정하고 MP 트리 탐색 시작\n",
+    "constructor_mp = ParsimonyTreeConstructor(searcher, nj_tree)  \n",
+    "# 초기 트리에 따라 탐색 결과가 달라질 수 있음\n",
+    "# 랜덤 트리보다는 NJ 트리나 UPGMA 트리를 초기 트리로 쓰는 것이 더 좋다\n",
     "\n",
-    "# NJ 트리를 초기 트리로 사용하여 MP 방법으로 최적 트리 추정\n",
-    "constructor_mp = ParsimonyTreeConstructor(searcher, nj_tree) \n",
-    "#휴리스틱 방법으로 찾는거기에 initial tree가 뭔지에 따라 결과값이 달라질 수 있음\n",
-    "#계산이 빠른 네이버 조이닝 트리 또는 UPGMA를 initial tree로 하면 좋다. 랜덤 트리보다.\n",
-    "mp_tree = constructor_mp.build_tree(alignment)\n",
+    "mp_tree = constructor_mp.build_tree(alignment)  \n",
+    "# alignment 데이터를 이용해 MP 최적 트리 생성\n",
     "print(\"\\nMaximum Parsimony Tree:\")\n",
-    "Phylo.draw_ascii(mp_tree)\n"
+    "Phylo.draw_ascii(mp_tree)\n",
+    "# MP 트리 출력"
    ]
   },
   {
@@ -284,7 +288,7 @@
    "source": [
     "\n",
     "# STEP 4: 계통수 시각화 (Phylo.draw함수 사용해서 이쁘게)\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(15, 5)) # 1행 3열 subplot 생성\n",
     "\n",
     "Phylo.draw(nj_tree, axes=axes[0], do_show=False)\n",
     "axes[0].set_title(\"Neighbor-Joining Tree\")\n",
